# cortiva

./: .coverage  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  conftest.py  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/scripts/: check-ac.sh  check-acceptance-criteria.sh  check-adr.sh  check-agent-review-prompt.sh  check-ai-delegation.sh  check-observability.sh
.github/workflows/: ac-lint.yml  acceptance-criteria-lint.yml  adr-lint.yml  agent-review-prompt-lint.yml  ai-delegation-lint.yml  ci.yml  observability-lint.yml  release.yml
docs/: adapters.md  audit.md  channels.md  configuration.md  delegation.md  goals.md  index.md  isolation.md  lifecycle.md  observability-workflow-activation.md  observability.md  org-model.md  policies.md  quickstart.md  reviews.md  roadmap-agent-autonomy.md  security.md  sessions.md  skills.md
examples/: README.md  basic_lifecycle.py  cortiva-isolated.yaml  custom_adapter.py  isolation_example.py
scripts/: sync_mcp_registry.py
src/cortiva/: __init__.py
src/cortiva/adapters/: protocols.py
src/cortiva/adapters/channel/: discord.py  internal.py  slack.py  teams.py
src/cortiva/adapters/consciousness/: anthropic.py  cortiva_routed.py  google.py  openai_compat.py
src/cortiva/adapters/memory/: engram.py  inmemory.py  neo4j.py
src/cortiva/adapters/routine/: __init__.py  ollama.py  simple.py
src/cortiva/adapters/terminal/: aider.py  claude_code.py  claude_session.py  codex.py
src/cortiva/cli/: dashboard.py  main.py  output.py
src/cortiva/core/: agent.py  agent_tools.py  approval.py  audit.py  balancer.py  budget.py  capacity.py  chat.py  claude_auth.py  claude_binary.py  cluster.py  commitments.py  config.py  consciousness_router.py  context.py  credentials.py  data_boundary.py  delegation.py  dev_sessions.py  discovery.py  emotions.py  encryption.py  events.py  expectations.py  fabric.py  familiarity.py  goals.py  governance.py  hiring.py  hooks.py  ipc.py  isolation.py  lifecycle.py  living_summary.py  memory_guard.py  models.py  org.py  planner.py  plugins.py  policy.py  (+12 more)
src/cortiva/culture/: __init__.py  health.py
src/cortiva/portal/: __init__.py  auth.py  server.py
src/cortiva/scheduling/: __init__.py  health.py  optimizer.py  rebalance.py
src/cortiva/skills/: registry.yaml
src/cortiva/skills/claude_code_deep_think/: procedures.md  skill.yaml  skills_text.md  wrapper.py
src/cortiva/skills/github_workflow/: procedures.md  skill.yaml  skills_text.md
src/cortiva/skills/haris_directory/: client.py  procedures.md  skill.yaml  skills_text.md
src/cortiva/templates/: Dockerfile.agent  __init__.py  docker-compose.agent.yml
src/cortiva/templates/dev-cortiva/: responsibilities.md  skills.md
src/cortiva/templates/dev-cortiva/identity/: identity.md  procedures.md  soul.md
src/cortiva/templates/dev-cortiva/today/: plan.md
src/cortiva/templates/pm-cortiva/: backlog.json  identity.md  plan.md  responsibilities.md  skills.md  soul.md
src/cortiva/templates/pm-cortiva/identity/: procedures.md  soul.md
src/cortiva/templates/qa-cortiva/: identity.md  plan.md  responsibilities.md  soul.md
src/cortiva/templates/qa-cortiva/identity/: identity.md  procedures.md  responsibilities.md  skills.md  soul.md
src/cortiva/workforce/: __init__.py  efficiency.py
tests/: test_agent_tools.py  test_approval.py  test_audit.py  test_balancer.py  test_bootstrap.py  test_budget.py  test_calculated_action.py  test_capacity.py  test_chat.py  test_claude_binary.py  test_claude_session.py  test_cli.py  test_cluster.py  test_codex_adapter.py  test_commitment_fabric.py  test_commitments.py  test_config.py  test_consciousness.py  test_consciousness_adapters.py  test_context.py  test_core.py  test_credentials.py  test_credentials_azure.py  test_culture_health.py  test_dashboard.py  test_data_boundary.py  test_deep_think_resolve.py  test_delegation.py  test_dev_session_reap.py  test_dev_sessions.py  test_discord.py  test_discovery.py  test_documents_fabric.py  test_emotions.py  test_encryption.py  test_encryption_extended.py  test_engram_adapter.py  test_escalation_routing.py  test_events.py  test_expectations.py  (+52 more)
tests/integration/: conftest.py  test_lifecycle.py
