[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cortiva"
version = "0.1.0-dev"
description = "The organisational fabric for autonomous agent teams"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Cortiva Contributors" },
]
keywords = [
    "ai",
    "agents",
    "autonomous",
    "multi-agent",
    "orchestration",
    "framework",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
    "setproctitle>=1.3",
    "rich>=13.0",
]

[project.optional-dependencies]
# Memory adapters
engram = ["engram-core"]
mem0 = ["mem0ai"]
neo4j = ["neo4j>=5.0"]

# Consciousness adapters
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.0"]

# Routine adapters
ollama = ["ollama"]

# Channel adapters
slack = ["slack-sdk>=3.0"]

# Portal
portal = ["fastapi[standard]>=0.115", "uvicorn>=0.34"]

# Development
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "mkdocs-material>=9.0",
]

# Container isolation (Tier 3) — optional Docker SDK
container = ["docker>=7.0"]

# Encryption at rest
encryption = ["cryptography>=43.0"]

# Azure integration (Managed Identity, Key Vault, Monitor)
azure = [
    "azure-identity>=1.17",
    "azure-keyvault-keys>=4.9",
    "azure-keyvault-secrets>=4.8",
]

# All adapters
all = [
    "engram-core",
    "anthropic>=0.40",
    "ollama",
    "slack-sdk>=3.0",
]

[project.scripts]
cortiva = "cortiva.cli.main:main"

[project.urls]
Homepage = "https://cortiva.dev"
Repository = "https://github.com/cortiva-dev/cortiva"
Documentation = "https://cortiva.dev/docs"
Issues = "https://github.com/cortiva-dev/cortiva/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cortiva"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
# Style debt accumulated before the lint gate was enforced — ignored so
# CI is meaningful (green = real regression, not noise). Burn down per
# rule; remove from this list as each category reaches zero.
# Burn-down order: E501 (long lines in examples/scripts/cli), N815
# (mixed-case attrs mirroring external JSON), E741, E402, N806, N818.
ignore = ["E501", "N815", "E741", "E402", "N806", "N818"]

[tool.mypy]
python_version = "3.11"
strict = true
# Grandfathered rules — aspirational but never enforced. Re-enable one at a
# time as the codebase is progressively cleaned up.
disallow_any_generics = false
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
warn_return_any = false
warn_unused_ignores = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Files with genuine type errors that predate strict enforcement.
# Remove each entry once the module is properly typed.
module = [
  "cortiva.core.fabric",
  "cortiva.portal.server",
  "cortiva.adapters.memory.neo4j",
  "cortiva.adapters.terminal.codex",
]
ignore_errors = true

[tool.coverage.run]
source = ["cortiva"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: end-to-end integration tests (may require optional deps)",
]
